@@ -3,6 +3,7 @@ from wtforms.ext.i18n.utils import get_translations
 
 translations_cache = {}
 
+
 class Form(form.Form):
     """
     Base form for a simple localized WTForms form.
@@ -16,10 +17,18 @@ class Form(form.Form):
 
         LANGUAGES = ['en_GB', 'en']
 
+    One can also provide the languages by passing `LANGUAGES=` to the
+    constructor of the form.
+
     Translations objects are cached to prevent having to get a new one for the
-    same languages every instantiation. 
+    same languages every instantiation.
     """
     LANGUAGES = None
+
+    def __init__(self, *args, **kwargs):
+        if 'LANGUAGES' in kwargs:
+            self.LANGUAGES = kwargs.pop('LANGUAGES')
+        super(Form, self).__init__(*args, **kwargs)
 
     def _get_translations(self):
         languages = tuple(self.LANGUAGES) if self.LANGUAGES else None
